Added REST API demo to this repo and also a database reset - The demo did not work by default so I uploaded to this repo with my own modifications of the dependencies - Also added a step to reset the database to the default values

--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-    "base_url": "http://localhost:8888/"
+    "base_url": "http://localhost:8888/",
+    "default_db_path": "./default_database/db.sqlite",
+    "database_path":   "./rest_api_demo-techtest1.2/rest_api_demo/db.sqlite"
 }
